# uc-ghostium

./: .gitignore  .gitmodules  AGENTS.md  README.md  build.sh  plan.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: nightly-build.yml  pr-lint.yml
config/: gn_args.gn  ungoogled_chromium_version
ghostium_src/overlay/: .clang-format  BUILD.gn
ghostium_src/overlay/chrome/browser/ghostium/: BUILD.gn  README.md  emulation_bridge.cc  emulation_bridge.h  emulation_bridge_unittest.cc  fingerprint_profile.cc  fingerprint_profile.h  fingerprint_profile_delivery.cc  fingerprint_profile_delivery.h  fingerprint_profile_delivery_unittest.cc  fingerprint_profile_mojom_traits.cc  fingerprint_profile_mojom_traits.h  fingerprint_profile_registry.cc  fingerprint_profile_registry.h  fingerprint_profile_registry_factory.cc  fingerprint_profile_registry_factory.h  fingerprint_profile_registry_unittest.cc
ghostium_src/overlay/chrome/browser/ghostium/cdp/: BUILD.gn  profile_parser.cc  profile_parser.h  profile_parser_unittest.cc  target_handler_ghostium.cc  target_handler_ghostium.h  target_handler_ghostium_unittest.cc
ghostium_src/overlay/public/mojom/ghostium/: BUILD.gn  fingerprint_profile.mojom
patches/: ghostium.series
patches/ghostium/: 0001-content-devtools-target-handler-hook.patch  0002-blink-navigator-webdriver-hook.patch  0003-blink-canvas2d-readback-hook.patch  0004-blink-webgl-readpixels-hook.patch  0005-blink-webgl-getparameter-hook.patch  0006-blink-audio-buffer-readback-hook.patch  0007-blink-analyser-node-readback-hook.patch  0008-blink-navigator-ua-hook.patch  0009-blink-navigator-uadata-hook.patch  0010-blink-navigator-hwc-devmem-hook.patch  0011-blink-navigator-languages-hook.patch  0012-blink-navigator-plugins-hook.patch  0013-blink-screen-hook.patch  0014-blink-window-devicepixelratio-hook.patch  0015-v8-intl-timezone-hook.patch  0016-v8-date-timezone-offset-hook.patch  0017-blink-fonts-enumeration-hook.patch  0018-blink-mediadevices-enumerate-hook.patch  0019-blink-rtcpeerconnection-ice-hook.patch  0020-content-browser-build-overlay-hook.patch  series
scripts/: apply_patches.py
